[gd_scene load_steps=4 format=3 uid="uid://cxc8c7c2kgbe0"]

[ext_resource type="Script" path="res://Game Components/Riddles/FinalBearRiddleQ.gd" id="1_2dje8"]
[ext_resource type="FontFile" uid="uid://dnk30javuvt8g" path="res://Assets/Font/Sol Schori.ttf" id="2_0tnsf"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u5l3w"]
size = Vector2(128, 192)

[node name="FinalBearRiddleQ" type="Area2D"]
script = ExtResource("1_2dje8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-13, 27.5)
shape = SubResource("RectangleShape2D_u5l3w")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -315.0
offset_top = -362.0
offset_right = 316.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0.188235, 0.270588, 0.160784, 0.760784)

[node name="Label" type="Label" parent="ColorRect"]
layout_mode = 0
offset_left = 150.5
offset_top = 103.0
offset_right = 480.5
offset_bottom = 128.0
theme_override_fonts/font = ExtResource("2_0tnsf")
text = "How much do brown bears weigh?"
horizontal_alignment = 1

[node name="Button" type="Button" parent="ColorRect"]
layout_mode = 0
offset_left = 246.5
offset_top = 200.0
offset_right = 386.5
offset_bottom = 240.0
theme_override_fonts/font = ExtResource("2_0tnsf")
text = "A ton!"

[node name="Button2" type="Button" parent="ColorRect"]
layout_mode = 0
offset_left = 214.5
offset_top = 250.0
offset_right = 416.5
offset_bottom = 290.0
theme_override_fonts/font = ExtResource("2_0tnsf")
text = "Light as a feather!"

[node name="Button3" type="Button" parent="ColorRect"]
layout_mode = 0
offset_left = 183.5
offset_top = 300.0
offset_right = 447.5
offset_bottom = 340.0
theme_override_fonts/font = ExtResource("2_0tnsf")
text = "Up to 1500 lbs or 680 kg"

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="pressed" from="ColorRect/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="ColorRect/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="ColorRect/Button3" to="." method="_on_button_3_pressed"]
